--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OLDA BLOg</title>
 </head>
 <body>
     <h1>Hello World</h1>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
