--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,9 @@
 {% block content %}
     {% for post in posts %}
         <div>
-            <h3>{{post.title}}</h3>
+            <h3>{{post.title}}
+            <a href="{{ url_for('Post:get', id=post.id) }}">click here</a>
+            </h3>
             <p>{{post.body}}</p>
         </div>
         <hr>
