update post tempate to show username who create it

--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -2,5 +2,7 @@
 
 {% block content %}
     <h3>{{post.title}}</h3>
+    <strong>{{post.user}}</strong>
+    <br>
     <p>{{post.body}}</p>
 {% endblock %}
