--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,18 +14,22 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Nanodegree-blog</a>
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link1</a>
-          </li>
+      <a class="navbar-brand" href="/">Nanodegree-blog</a>
+      <div class="collapse navbar-collapse justify-content-between" id="navbar">
+        <a class="nav-link" href="/">Home</a>
+        <ul class="nav navbar-nav">
+          {% if not current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="btn btn-outline-success my-2 my-sm-0" href="{{url_for('user.login')}}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-outline-success my-2 my-sm-0" href="{{url_for('user.register')}}">Sign up</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="btn btn-outline-success my-2 my-sm-0" href="{{url_for('user.logout')}}">Logout</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </nav>
