--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,21 @@
 
 {% block content %}
     {% for post in posts %}
-        <div>
-            <h3>{{post.title}}
-            <a href="{{ url_for('Post:get', entity_id=post.id) }}">click here</a>
-            </h3>
-            <p>{{post.body}}</p>
+      <div class="row justify-content-center">
+        <div class="col col-md-8">
+          <h3>
+            <a href="{{ url_for('Post:get', entity_id=post.id) }}">
+              {{post.title}}
+            </a>
+          </h3>
+          <p>{{post.body|truncate(1000, killwords=True)}}</p>
+          {% if post.body|length > 1000 %}
+            <a href="{{url_for('Post:get', entity_id=post.id)}}">
+              Continue reading..
+            </a>
+          {% endif %}
+          <hr>
         </div>
-        <hr>
+      </div>
     {% endfor %}
 {% endblock %}
