Add handle comments creation error feature

--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -37,6 +37,16 @@
       </div>
     </div>
   </script>
+
+  <!-- Errors messages template -->
+  <script type="text/template" class="error-template">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <strong>Error:</strong><%= error %>
+    </div>
+  </script>
 {% endblock %}
 
 {% block scripts %}
