Add edit comment feature

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -5,3 +5,11 @@ body {
 .comments {
   display: none;
 }
+
+.edit-comment-container {
+  display: none;
+}
+
+.edit-comment-container .comment-input {
+  width: 90%;
+}
