Add edit and delete feature for post

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,7 @@
                 {{current_user.username}}
               </a>
               <div class="dropdown-menu">
+                <a class="dropdown-item" href="{{url_for('Post:new')}}">New Post</a>
                 <a class="dropdown-item" href="{{url_for('user.profile')}}">Profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{{url_for('user.logout')}}">Logout</a>
