--- a/app/templates/macros/form_field.html
+++ b/app/templates/macros/form_field.html
@@ -1,13 +1,14 @@
-{% macro form_field(field) %}  
-    <div class="form-group{{ 'has-error has-feedback' if field.errors }}">    
-        {{ field.label(class='col-sm-3 control-label') }}    
-        <div class="col-sm-9">      
-            {{ field(class='form-control', **kwargs) }}         {% if field.errors %}
-                <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
-            {% endif %}      
-            {% for error in field.errors %}
-                <span class="help-block">{{ error }}</span>
-            {% endfor %} 
-        </div>  
+{% macro form_field(field) %}
+  <div class="form-group{{ 'has-error has-feedback' if field.errors }}">
+    {{ field.label(class='col-sm-3 control-label') }}
+    <div class="col-sm-9">
+        {{ field(class='form-control', **kwargs) }}
+        {% if field.errors %}
+            <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
+        {% endif %}
+        {% for error in field.errors %}
+          <span class="help-block">{{ error }}</span>
+        {% endfor %}
     </div>
+  </div>
 {% endmacro %}
