--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+  {% if posts %}
     {% for post in posts %}
       <div class="row justify-content-center">
         <div class="col col-md-8">
@@ -19,4 +20,5 @@
         </div>
       </div>
     {% endfor %}
+  {% endif %}
 {% endblock %}
