--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,5 +57,6 @@
   {% block js_templates %}{% endblock %}
   <script src="{{url_for('static', filename='js/helpers.js')}}"></script>
   {% block scripts %}{% endblock %}
+  <script src="{{url_for('static', filename='js/app.js')}}" ></script>
 </body>
 </html>
