Add post body in index and post page to wrap content

--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -13,7 +13,7 @@
         {% endif %}
       </div>
       <strong>{{post.user}}</strong>
-      <pre>{{post.body}}</pre>
+      <pre class="post-body">{{post.body}}</pre>
     </div>
   </div>
   {% if comment_form %}
