--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
               {{post.title}}
             </a>
           </h3>
-          <p>{{post.body|truncate(1000, killwords=True)}}</p>
+          <pre class="post-body">{{post.body|truncate(1000, killwords=True)}}</pre>
           {% if post.body|length > 1000 %}
             <a href="{{url_for('Post:get', entity_id=post.id)}}">
               Continue reading..
