--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,24 @@
     </nav>
   </header>
   <main class="container">
+    {# This block is to display flash messages generated in flask views #}
+    <div class="row">
+      {%- with messages = get_flashed_messages(with_categories=true) -%}
+        {% if messages %}
+          {% for category, message in messages %}
+            {% if category=='error' %}
+              {% set category='danger' %}
+            {% endif %}
+              <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                {{ message|safe }}
+              </div>
+          {% endfor %}
+        {% endif %}
+      {%- endwith -%}
+      </div>
     {% block content %}
     {% endblock %}
   </main>
