--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -14,6 +14,10 @@
       </div>
       <strong>{{post.user}}</strong>
       <pre class="post-body">{{post.body}}</pre>
+      <div class="post-likes">
+        <span class="badge badge-pill badge-info">{{post.likes}}</span>
+        <a href="{{url_for('Post:likes', entity_id=post.id)}}">like</a>
+      </div>
     </div>
   </div>
   {% if comment_form %}
