--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -37,6 +37,7 @@
 {% endblock %}
 
 {% block js_templates%}
+  <!-- Comments template -->
   <script type="text/template" class="comments-template">
     <div class="card">
       <div class="card-block" data-id="<%= id %>">
